# whid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.db
include/: Activity.hpp  utils.hpp
src/: Activity.cpp  Activity.hpp  TimePoint.hpp  main.cpp  test.cpp  utils.cpp
